--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3nKZ5ydK26tuGUGBcHIThX6XVfqrfrKQ&libraries=geometry"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3nKZ5ydK26tuGUGBcHIThX6XVfqrfrKQ&libraries=geometry&libraries=drawing"></script>
 </body>
 </html>
